Added pdf version modified styles.css so that it does the centering of images
	modified:   brutal_summers.Rmd
	modified:   brutal_summers.html
	new file:   brutal_summers.pdf
	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,5 @@ blockquote p {font-size:12px !important}
 h1 {font-size: 24px}
 h2 {font-size: 20px}
 h4 {font-size: 15px}
+img {display:block;margin:auto}
 .poem {margin-left:3em; font-size:80%;}
